# murder-creek-barbell

./: .gitignore  SETUP.md  db.sqlite3  package-lock.json  package.json  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/management/commands/: test_webhook.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  payment.py  user.py
accounts/views/: __init__.py  account.py  checkout.py  stripe_client.py  subscription.py  webhooks.py
core/: asgi.py  settings.py  urls.py  wsgi.py
core/settings/: base.py
static/css/: styles.css
templates/: _base.html  _messages.html
templates/account/: confirm_login_code.html  email_confirm.html  login.html  logout.html  signup.html  verification_sent.html
templates/accounts/: billing.html  cancel_subscription.html  dashboard.html  settings.html
templates/cotton/: card.html  hero.html  navbar.html
templates/pages/: home.html
templates/pages/partials/: home_bot.html  home_mid.html
